beginnen vanaf syncretism, dan door naar formal containment
eerst verhaal maken fenna, dan de voorbeelden erbij

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -40,7 +40,8 @@
   booktitle={Language change and Generative Grammar},
   pages={120--153},
   year={1996},
-  publisher={Springer}
+  publisher={Springer},
+  doi = {10.1007/978-3-322-90776-9_5}
 }
 
 @book{behaghel1923,
@@ -120,20 +121,12 @@
 }
 
 @article{starke2009,
-  title = {Nanosyntax: {{A}} Short Primer to a New Approach to Language},
+  title = {Nanosyntax: A Short Primer to a New Approach to Language},
   volume = {36},
   journal = {Nordlyd},
   author = {Starke, Michal},
   year = {2009},
   pages = {1-6}
-}
-
-@book{weber1983,
-  title={Relativization and nominalized clauses in Huallaga (Huanuco) Quechua},
-  author={Weber, David},
-  volume={103},
-  year={1983},
-  publisher={University of California Press}
 }
 
 @article{keenan1977,
@@ -166,26 +159,6 @@
   adress = {Baltimore}
 }
 
-@book{timberlake2004,
-  title = {A reference grammar of Russian},
-  author = {Timberlake, Alan},
-  year = {2004},
-  publisher = {Cambridge University Press},
-  adress = {New York}
-}
-
-
-@incollection{moravcsik2009,
-  title={The distribution of case},
-  author={Moravcsik, Edith A.},
-  booktitle={The Oxford handbook of case},
-  editor={Andrej Malchukov and Andrew Spencer},
-  pages={231–245},
-  year={2009},
-  adress={Oxford},
-  publisher={Oxford University Press}
-}
-
 @article{bresnan1978,
   title = {The Syntax of Free Relatives in English},
   volume = {9},
@@ -213,28 +186,8 @@
   journal = {Linguistic Inquiry},
   author = {Citko, Barbara},
   year = {2005},
-  pages = {475-496}
-}
-
-@article{grosu1996,
-  title = {The Proper Analysis of ``Missing-P'' Free Relative Constructions},
-  volume = {27},
-  number = {2},
-  journal = {Linguistic Inquiry},
-  author = {Grosu, Alexander},
-  year = {1996},
-  pages = {257-293}
-}
-
-@article{grosu2003,
-  title = {A Unified Theory of `standard' and `transparent' Free Relatives},
-  volume = {21},
-  doi = {10.1075/la.55.07gro},
-  number = {2},
-  journal = {Natural Language and Linguistic Theory},
-  author = {Grosu, Alexander},
-  year = {2003},
-  pages = {247-331}
+  pages = {475-496},
+  doi = {10.1162/002438905774464331}
 }
 
 @phdthesis{gilligan1987,
@@ -253,7 +206,8 @@
   address = {Stanford},
   editor = {Joseph H. Greenberg, Charles A. Ferguson and Edith A. Moravcsik},
   booktitle = {Universals of Human Language: IV: Syntax},
-  pages = {331-374}
+  pages = {331-374},
+  doi={10.2307/413494}
 }
 
 @incollection{steel1978,
@@ -264,7 +218,8 @@
   address = {Stanford},
   editor = {Joseph H. Greenberg, Charles A. Ferguson and Edith A. Moravcsik},
   booktitle = {Universals of Human Language: IV: Syntax},
-  pages = {585-623}
+  pages = {585-623},
+  doi={10.2307/413494}
 }
 
 @incollection{bobaljik2006,
@@ -286,7 +241,8 @@
   number={4},
   pages={441--483},
   year={1985},
-  publisher={Springer}
+  publisher={Springer},
+  doi={10.1163/9789004373235_005}
 }
 
 @inproceedings{harley1995,
@@ -356,3 +312,26 @@
   publisher={Springer},
   doi={10.1007/s11049-018-9425-0}
 }
+
+@article{miyagawa2004,
+  title={Argument structure and ditransitive verbs in Japanese},
+  author={Miyagawa, Shigeru and Tsujioka, Takae},
+  journal={Journal of East Asian Linguistics},
+  volume={13},
+  number={1},
+  pages={1--38},
+  year={2004},
+  publisher={Springer},
+  doi={10.1023/b:jeal.0000007345.64336.84}
+}
+
+@book{terrill2003,
+  title={A grammar of Lavukaleve},
+  author={Terrill, Angela},
+  year={2003},
+  publisher={Mouton de Gruyter},
+  doi={10.1515/9783110923964},
+  address={Berlin/New York}
+}
+
+%%checked doi up to here
