--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -46,7 +46,7 @@ Examples, in which the relative pronoun appears in accusative case, the internal
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
 
 Consider the example in \ref{ex:gothic-nom-dat}, in which the internal case is nominative and the external case is dative.
-% The relative clause, excluding the relative pronoun, is marked in bold.
+The relative clause, excluding the relative pronoun, is marked in bold.
 The internal case is nominative. The predicate \tit{sind fraþjaiþ} `are above' takes a nominative subject.
 The external case is dative. The predicate \tit{fraþjaiþ} `think on' takes dative indirect objects.
 The relative pronoun \tit{þaim} `what.\ac{dat}' appears in the external case: the dative.
@@ -57,7 +57,7 @@ Examples, in which the relative pronoun appears in nominative case, the internal
  `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-nom-dat}
 
 Consider the example in \ref{ex:gothic-dat-nom}, in which the internal case is dative and the external case is nominative.
-% The relative clause, including the relative pronoun, is marked in bold.
+The relative clause, including the relative pronoun, is marked in bold.
 The internal case is dative. The predicate \tit{fraletada} `is forgiven' takes dative objects.
 The external case is nominative. The predicate \tit{frijod} `loves' takes nominative subjects.
 The relative pronoun \tit{þamm(a)} `who.\ac{dat}' appears in the internal case: the dative.
@@ -70,7 +70,7 @@ Examples, in which the relative pronoun appears in nominative case, the internal
 I finish with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
 
 Consider the example in \ref{ex:gothic-nom-acc}, in which the internal case is nominative and the external case is accusative.
-% The relative clause, excluding the relative pronoun, is marked in bold.
+The relative clause, excluding the relative pronoun, is marked in bold.
 The internal case is nominative. The predicate \tit{ist us Laudeikaion} `is from Laodicea' takes nominative subjects.
 The external case is accusative. The predicate \tit{ussiggwaid} `read' takes accusative objects.
 The relative pronoun \tit{þo} `what.\ac{acc}' appears in the external case: the accusative.
@@ -81,7 +81,7 @@ Examples, in which the relative pronoun appears in nominative case, the internal
  `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
 
 Consider the example in \ref{ex:gothic-acc-nom}, in which the internal case is accusative and the external case is nominative.
-% The relative clause, including the relative pronoun, is marked in bold.
+The relative clause, including the relative pronoun, is marked in bold.
 The internal case is accusative. The predicate \tit{frijos} `love' takes accusative objects.
 The external case is nominative. The predicate \tit{siuks ist} `is sick' takes nominative subjects.
 The relative pronoun \tit{þan} `who.\ac{acc}' appears in the internal case: the accusative.
@@ -92,7 +92,7 @@ Examples, in which the relative pronoun appears in nominative case, the internal
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
 
 A summary of the Gothic data as a whole is given in Table \ref{tbl:summary-gothic}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match.
-The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in light gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
+The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
 Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that the examples are ungrammatical.
 }
 
@@ -179,25 +179,25 @@ Then, there are four types of languages possible: first, a language that does no
 
 The implicational hierarchy holds for languages, not for sentences. That is, it is not the case that in a language of a particular type all instances of the grammatical function show agreement. To be more precise, in a language of the second type, that only shows agreement with the subject, not all subjects have to show agreement. Particular types of subject, such as experiencer subjects often do not show any agreement.
 
-Mandarin Chinese is an example of a language that does not show any agreement on the predicate. An example is given in \ref{ex:chinese-agr}. The predicate \tit{gěi} `give' does not agree with the subject \tit{nǐ} `you', with the direct object \tit{shū} `book' or with the indirect object \tit{wǒ} `me'.
+Japanese is an example of a language that does not show any agreement on the predicate. An example is given in \ref{ex:japanese-agr}. The predicate \tit{okutta} `sent' does not agree with the subject \tit{Tarooga} `Taro', with the direct object \tit{nimotuo} `package' or with the indirect object \tit{Hanakoni} `Hanako'.
 
-\exg. Nǐ bǎ shū gěi wǒ-le.\\
- you ba book give me-\ac{asp}\\
- `You gave me the book.' \flushfill{Mandarin Chinese, Zheng Shen p.c.}\label{ex:chinese-agr}
+\exg. Taroo-ga Hanako-ni nimotu-o okutta.\\
+ Taro-\tsc{nom} Hanako-\tsc{dat} package-\tsc{acc} sent\\
+ `Taro sent Hanako a package.' \flushfill{Japanese, \pgcitealt{miyagawa2004}{5}}\label{ex:japanese-agr}
 
-German is an example of a language that can show agreement with the subject of the clause. An example is given in \ref{ex:german-agr}. The predicate \tit{gibst} `give' contains the morpheme \tit{-st}. This morpheme is the agreement morpheme for second person singular subjects. The predicate \tit{gibst} `give' agrees in person and number with the subject \tit{du} `you'. There is no agreement with the direct object \tit{das Buch} `the book' or the indirect object \tit{mir} `me'.
+German is an example of a language that can show agreement with the subject of the clause. An example is given in \ref{ex:german-agr}. The predicate \tit{gibst} `give' contains the morpheme \tit{-st}, marked in bold. This morpheme is the agreement morpheme for second person singular subjects. The predicate \tit{gibst} `give' agrees in person and number with the subject \tit{du} `you'. There is no agreement with the direct object \tit{das Buch} `the book' or the indirect object \tit{mir} `me'.
 
 \exg. Du gib \tbf{-st} mir das Buch.\\
  you give -2\ac{sg} me the book\\
  `You give me the book.' \flushfill{German}\label{ex:german-agr}
 
-Hungarian is an example of a language that can show agreement with the subject and the direct object of a clause. An example is given in \ref{ex:hungarian-agr}. The predicate \tit{adom} `give' contains the morpheme \tit{-om}. This is a portmonteau morpheme for a first person singular subject and a third person object agreement. The predicate \tit{adom} `give' agrees with the subject \tit{én} `I' and the direct object \tit{a könyvet} `the book'. There is no agreement with the indirect object \tit{neked} `you'.
+Hungarian is an example of a language that can show agreement with the subject and the direct object of a clause. An example is given in \ref{ex:hungarian-agr}. The predicate \tit{adom} `give' contains the morpheme \tit{-om}, marked in bold. This is a portmonteau morpheme for a first person singular subject and a third person object agreement. The predicate \tit{adom} `give' agrees with the subject \tit{én} `I' and the direct object \tit{a könyvet} `the book'. There is no agreement with the indirect object \tit{neked} `you'.
 
 \exg. (Én) neked ad \tbf{-om} a könyv -et\\
  I you.\ac{dat}.\ac{sg} give -1\ac{sg}.\ac{subj}>3.\ac{obj} the book -\ac{acc}\\
  `I give you the book.' \flushfill{Hungarian, András Bárány p.c.}\label{ex:hungarian-agr}
 
-Basque is an example of language that can show agreement with the subject, the direct object and the indirect object. Basque is an ergative-absolutive language, so in transitive clauses subjects are marked as ergative and objects are marked as absolutive. An example from the Bizkaian dialect is given in \ref{ex:basque-agr}. The stem of the auxiliary \tit{aus} combines with the morphemes \tit{d-}, \tit{-ta} and \tit{-zu}. The morpheme \tit{d-} is the agreement morpheme for third person singular as direct objects, which is here \tit{liburua} `the book'. The morpheme \tit{-ta} is the agreement morpheme for first person singular indirect objects, which is here \tit{niri} `me'. The morpheme \tit{-zu} is the agreement morpheme for second person singular ergative subjects, which is here \tit{zuk} `you'.
+Basque is an example of language that can show agreement with the subject, the direct object and the indirect object. Basque is an ergative-absolutive language, so in transitive clauses subjects are marked as ergative and objects are marked as absolutive. An example from the Bizkaian dialect is given in \ref{ex:basque-agr}. The stem of the auxiliary \tit{aus} combines with the morphemes \tit{d-}, \tit{-ta} and \tit{-zu}, marked in bold. The morpheme \tit{d-} is the agreement morpheme for third person singular as direct objects, which is here \tit{liburua} `the book'. The morpheme \tit{-ta} is the agreement morpheme for first person singular indirect objects, which is here \tit{niri} `me'. The morpheme \tit{-zu} is the agreement morpheme for second person singular ergative subjects, which is here \tit{zuk} `you'.
 
 \exg. Zu-k ni-ri liburu-a emon \tbf{d} -aus \tbf{-ta} \tbf{-zu}.\\
  you-\ac{erg} me-\ac{dat} book-\ac{def}.\ac{abs} given \ac{abs}.3\ac{sg} -\ac{aux} -\ac{dat}.1\ac{sg} -\ac{erg}.2\ac{sg}\\
@@ -216,7 +216,7 @@ Putting the languages in \posscitet{moravcsik1978} figure gives the following re
      \node[] at (0,1.5) {direct object};
      \node[align=center] at (0,0) {indirect\\ object};
 
-     \node[] at (2.5,3) {\footnotesize{● Chinese}};
+     \node[] at (2.5,3) {\footnotesize{● Japanese}};
      \node[] at (2.25,2) {\footnotesize{● German}};
      \node[] at (2,1) {\footnotesize{● Hungarian}};
      \node[] at (1.375,0) {\footnotesize{● Basque}};
@@ -225,7 +225,7 @@ Putting the languages in \posscitet{moravcsik1978} figure gives the following re
    \label{fig:agr-sub-do-io-lang}
  \end{figure}
 
-\citet{gilligan1987} performed a typological study among 100 genetically and areally diverse languages, which confirms the picture. The results are shown in Table \ref{tbl:agr-typo}. There are 23 languages that do not show any agreement, like Chinese. There are 31 languages that show agreement only with the subject and not with the direct and indirect object, like German. There are 25 languages that show agreement with the subject and direct object but not with the indirect object, like Hungarian. There are 23 languages that show agreement with the subject, the direct object and the indirect object, like Basque.
+\citet{gilligan1987} performed a typological study among 100 genetically and areally diverse languages, which confirms the picture. The results are shown in Table \ref{tbl:agr-typo}. There are 23 languages that do not show any agreement, like Japanese. There are 31 languages that show agreement only with the subject and not with the direct and indirect object, like German. There are 25 languages that show agreement with the subject and direct object but not with the indirect object, like Hungarian. There are 23 languages that show agreement with the subject, the direct object and the indirect object, like Basque.
 
  \begin{table}[H]
    \center
@@ -237,7 +237,7 @@ Putting the languages in \posscitet{moravcsik1978} figure gives the following re
                     & direct & indirect       & number       &         \\
            subject  & object & object         & of languages & example \\
        \cmidrule{1-3} \cmidrule{4-4} \cmidrule{5-5}
-           *    & * & * & 23  & Chinese    \\
+           *    & * & * & 23  & Japanese    \\
            ✔    & * & * & 31  & German     \\
            ✔    & ✔ & * & 25  & Hungarian  \\
            ✔    & ✔ & ✔ & 23  & Basque     \\
@@ -315,7 +315,6 @@ In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It 
 \citet{keenan1977} formulated the implicational hierarchy in terms of the grammatical functions subject, direct object and indirect object.\footnote{
 \citet{keenan1977} also included obliques, possessives and objects of comparison on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
 }
-
 The implicational hierarchy is schematically represented in Figure \ref{fig:relativization}. It should be read as follows: if a language allows a particular relativization strategy of the grammatical function in a particular circle, it also allows this relativization strategy of the grammatical function of the circle around it. The languages in the figure give examples of the circles they are in.
 
 \begin{figure}[H]
@@ -347,15 +346,15 @@ German is another example of a language that allows subjects to be relativized u
 the woman kisses the man\\
 `The woman is kissing the man.' \flushfill{German}\label{ex:german-rel-decl}
 
-In \ref{ex:german-rel-subj}, the subject from the declarative sentence is relativized. The predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{den Mann küssende} `the man kissing'. The relative clause directly precedes the noun of the subject, creating distance between the determiner \tit{die} `the' and \tit{Frau} `woman'.
+In \ref{ex:german-rel-subj}, the subject from the declarative sentence \tit{die Frau} `the woman', marked in bold, is relativized. The predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{den Mann küssende} `the man kissing'. The relative clause directly precedes the noun of the subject, creating distance between the determiner \tit{die} `the' and \tit{Frau} `woman'.
 
 \exg. \tbf{die} den Mann küssende \tbf{Frau}\\
  the the man kissing woman\\
  `the woman who is kissing the man' \flushfill{German}\label{ex:german-rel-subj}
 
-The object of \ref{ex:german-rel-decl} cannot be relativized in the same way, as shown in \ref{ex:german-rel-no-do}. Again, the predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{die Frau küssende} `the woman kissing'. The relative clause directly precedes the noun of the object, creating distance between the determiner \tit{der} `the' and \tit{Mann} `man'. This example is ungrammatical.
+The object of \ref{ex:german-rel-decl} \tit{den Man} `the man', marked in bold, cannot be relativized in the same way, as shown in \ref{ex:german-rel-no-do}. Again, the predicate form the declarative clause \tit{küsst} `kisses' is turned in into the participle \tit{küssende} `kissing'. The participle appears at the end of the relative clause \tit{die Frau küssende} `the woman kissing'. The relative clause directly precedes the noun of the object, creating distance between the determiner \tit{der} `the' and \tit{Mann} `man'. This example is ungrammatical.
 
-\exg. \tbf{den} die Frau küssende \tbf{Mann}\\
+\exg. *\tbf{den} die Frau küssende \tbf{Mann}\\
  the the woman kissing man\\
  `the man who is kissing the woman' \flushfill{German}\label{ex:german-rel-no-do}
 \z.
@@ -368,19 +367,19 @@ The object of \ref{ex:german-rel-decl} cannot be relativized in the same way, as
  saw the woman the student\\
  `The student saw the woman.' \flushfill{Malagasy, \pgcitealt{keenan1977}{70}}\label{ex:malagasy-decl}
 
-In \ref{ex:malagasy-subj}, the subject from the declarative sentence is relativized. The subject \tit{ny mpianatra} `the student' appears in the first position of the clause. It is followed by the invariable relativizer \tit{izay} `that'. After that, the rest of the relative clause follows, in this case \tit{nahita ny vehivavy} `saw the woman'.
+In \ref{ex:malagasy-subj}, the subject from the declarative sentence, marked in bold, is relativized. The subject \tit{ny mpianatra} `the student' appears in the first position of the clause. It is followed by the invariable relativizer \tit{izay} `that'. After that, the rest of the relative clause follows, in this case \tit{nahita ny vehivavy} `saw the woman'.
 
 \exg. \tbf{ny} \tbf{mpianatra} izay nahita ny vehivavy\\
  the student that saw the woman\\
  `the student that saw the woman' \flushfill{Malagasy, \pgcitealt{keenan1977}{70}, my boldfacing}\label{ex:malagasy-subj}
 
-The object of \ref{ex:malagasy-decl} cannot be relativized in the same way, as shown in \ref{ex:malagasy-no-do}. Here the object \tit{ny vehivavy} `the woman' appears in the first position of the clause. It is again followed by the relativizer \tit{izay} `that' and the rest of the relative clause, which is here \tit{nahita ny mpianatra} `saw the student'. This example is ungrammatical.
+The object of \ref{ex:malagasy-decl} cannot be relativized in the same way, as shown in \ref{ex:malagasy-no-do}. Here the object \tit{ny vehivavy} `the woman', marked in bold, appears in the first position of the clause. It is again followed by the relativizer \tit{izay} `that' and the rest of the relative clause, which is here \tit{nahita ny mpianatra} `saw the student'. This example is ungrammatical.
 
 \exg. *\tbf{ny} \tbf{vehivavy} izay nahita ny mpianatra\\
  the woman that saw the student\\
  `the woman that the student saw' \flushfill{Malagasy, \pgcitealt{keenan1977}{70}, my boldfacing}\label{ex:malagasy-no-do}
 
-Malay is an example of a language that has a relativization strategy for subjects and direct objects, but not for indirect objects. \ref{ex:malay-do} shows an example in which the object is relativized. The object here is \tit{ayam} `chicken'. It is followed by the relativizer \tit{yang} `that'. After that, the rest of the relative clause \tit{Aminah sedang memakan} `Aminah is eating' follows. The same strategy works to relativize subjects.
+Malay is an example of a language that has a relativization strategy for subjects and direct objects, but not for indirect objects. \ref{ex:malay-do} shows an example in which the object is relativized. The object here is \tit{ayam} `chicken', marked in bold. It is followed by the relativizer \tit{yang} `that'. After that, the rest of the relative clause \tit{Aminah sedang memakan} `Aminah is eating' follows. The same strategy works to relativize subjects.
 
 \exg. Ali bunoh \tbf{ayam} yang Aminah sedang memakan.\\
  Ali kill chicken that Aminah \ac{prog} eat\\
@@ -392,7 +391,7 @@ Indirect objects cannot be relativized using the same strategy. \ref{ex:malay-de
  Ali give potato the to woman the\\
  `Ali gave the potato to the woman.'\label{ex:malay-decl} \flushfill{Malay, \pgcitealt{keenan1977}{71}}
 
-This is illustrated by the examples in \ref{ex:malay-no-io}. In \ref{ex:malay-no-io1}, the direct object \tit{perempuan kapada} `to the woman' appears in the first position of the clause. It is followed by the relativizer \tit{yang} `that' and the rest of the relative clause \tit{Ali beri ubi kentang itu} `Ali gave the potato to'. This example in ungrammatical. The example in \ref{ex:malay-no-io2} differs from \ref{ex:malay-no-io} in that the preposition \tit{kapada} `to' has been stranded in the relative clause. This example is ungrammatical as well, indicating this was not the reason for the ungrammaticality.
+This is illustrated by the examples in \ref{ex:malay-no-io}. In \ref{ex:malay-no-io1}, the direct object \tit{perempuan kapada} `to the woman', marked in bold, appears in the first position of the clause. It is followed by the relativizer \tit{yang} `that' and the rest of the relative clause \tit{Ali beri ubi kentang itu} `Ali gave the potato to'. This example in ungrammatical. The example in \ref{ex:malay-no-io2} differs from \ref{ex:malay-no-io} in that the preposition \tit{kapada} `to' has been stranded in the relative clause. This example is ungrammatical as well, indicating this was not the reason for the ungrammaticality.
 
 \ex.\label{ex:malay-no-io}
 \ag. *\tbf{perempuan} \tbf{kapada} yang Ali beri {ubi kentang} itu\\
@@ -410,12 +409,12 @@ A relative clause in Basque appears in the prenominal position and it is marked 
 additionally, the relativized positions do not appear in verbal agreement anymore, but this not visible in the example, because they are all phonologically zero.
 }
 \ref{ex:basque-sub} shows the four relativizations that are derived from \ref{ex:basque-decl}.
-In \ref{ex:basque-sub}, the ergative subject \tit{gizonak} `the man' from \ref{ex:basque-decl} is relativized. The head \tit{gizona} `the man' has lost its ergative marker \tit{-k}, and follows the relative clause \tit{makumeari liburua eman dio} `who has given the book to the woman'. The suffix \tit{-n} is attached to the relative clause.
-In \ref{ex:basque-do}, the absolutive direct object \tit{liburua} `the book' from \ref{ex:basque-decl} is relativized. The head \tit{liburua} `the book' follows the relative clause \tit{gizonak emakumeari eman dion} `that the man has given to the woman'.\footnote{
+In \ref{ex:basque-sub}, the ergative subject \tit{gizonak} `the man' from \ref{ex:basque-decl} is relativized. The head \tit{gizona} `the man', marked in bold, has lost its ergative marker \tit{-k}, and follows the relative clause \tit{makumeari liburua eman dio} `who has given the book to the woman'. The suffix \tit{-n} is attached to the relative clause.
+In \ref{ex:basque-do}, the absolutive direct object \tit{liburua} `the book' from \ref{ex:basque-decl} is relativized. The head \tit{liburua} `the book', marked in bold, follows the relative clause \tit{gizonak emakumeari eman dion} `that the man has given to the woman'.\footnote{
 The absolutive direct object \tit{liburua} `the book' does not have an additional overt absolutive marker, so this difference cannot be observed when it is relativized.
 }
 The suffix \tit{-n} is attached to the relative clause.
-In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' from \ref{ex:basque-decl} is relativized. The head \tit{emakumea} `the man' has lost its dative marker \tit{-ri}, and follows the relative clause \tit{gizonak liburua eman dion} `that the man has given the book to'. The suffix \tit{-n} is attached to the relative clause.
+In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' from \ref{ex:basque-decl} is relativized. The head \tit{emakumea} `the man', marked in bold, has lost its dative marker \tit{-ri}, and follows the relative clause \tit{gizonak liburua eman dion} `that the man has given the book to'. The suffix \tit{-n} is attached to the relative clause.
 
 \ex.\label{ex:basque-rel}
 \ag. emakume-a-ri liburu-a eman dio-n \tbf{gizon-a}\\
@@ -440,15 +439,11 @@ In this section, I show that this same case scale also shows up in morphophonolo
 
 \subsection{Syncretism}
 
-Syncretism refers to the phenomenon whereby two or more different functions are fulfilled by a single form \citep{baerman2002}. In this section I show that syncretism patterns among nominative, accusative and dative are not random. Instead, syncretism only targets elements that are continuous on the case scale and not non-continuous ones \citep{baerman2005,caha2009,zompi2017,mcfadden2018,smith2019case}.
+Syncretism refers to the phenomenon whereby two or more different functions are fulfilled by a single form \citep[cf.][]{baerman2002}. In this section I show that syncretism patterns among nominative, accusative and dative are not random. Instead, they pattern along the case scale \tsc{nom} < \tsc{acc} < \tsc{dat}.
 
-
-
-Icelandic: \pgcitealt{einarsson1949}{68}
-Teribe:
-Lavukaleve: %Yvonne?
-Khinalugh: %beata etc
-
+It has been widely established that syncretism only targets continuous elements and not non-continuous ones along the ordering \tsc{nom} --- \tsc{acc} --- \tsc{dat} \citep{baerman2005,caha2009,zompi2017,mcfadden2018,smith2019case}.
+That means four possible patterns are crosslinguistically attested. First, all three cases are syncretic. Second, nominative and accusative are syncretic and the dative is not. Third, the accusative and the dative are syncretic and the nominative is not. Fourth, all cases are non-syncretic.
+There is one pattern that is not possible, because it does targets non-continuous regions: nominative and dative are syncretic and accusative is not. This pattern is not attested crosslinguistically.
 
 \begin{table}[H]
   \center
@@ -463,29 +458,29 @@ Khinalugh: %beata etc
             & language \\
       \cmidrule(lr){1-3} \cmidrule(lr){4-6} \cmidrule(lr){7-7} \cmidrule(lr){8-8}
           A & A & A
-            & \cellcolor{LG}\tbf{inu}
-            & \cellcolor{LG}\tbf{inu}
-            & \cellcolor{LG}\tbf{inu}
+            & \cellcolor{LG}jullie
+            & \cellcolor{LG}jullie
+            & \cellcolor{LG}jullie
             & 2\ac{pl}
-            & Lavukaleve \\
+            & Dutch \\
           A & B & B
-            & ta
-            & \cellcolor{LG}\tbf{bor}
-            & \cellcolor{LG}\tbf{bor}
-            & 1\ac{pl}
-            & Teribe \\
-          A & A & B
-            & \cellcolor{LG}\tbf{það}
-            & \cellcolor{LG}\tbf{það}
-            & því
-            & 3\ac{pl}.\ac{n}
+            & við
+            & \cellcolor{LG}okkur
+            & \cellcolor{LG}okkur
+            & 1\tsc{pl}
             & Icelandic \\
+          A & A & B
+            & \cellcolor{LG}sie
+            & \cellcolor{LG}sie
+            & ihr
+            & 3\tsc{sg}.\tsc{f}
+            & German \\
           A & B & C
-            & zɨ
-            & jä
-            & as(ɨr
-            & 1\ac{sg}
-            & Khinalugh \\
+            & tú
+            & teg
+            & tær
+            & 2\ac{sg}
+            & Faroese \\
           A & B & A
             & \cellcolor{LG}
             &
@@ -496,8 +491,19 @@ Khinalugh: %beata etc
     \end{tabular}
 \end{table}
 
+I give examples from different Germanic languages.
+
+decribe the examples in the table
+
+Icelandic: \pgcitealt{einarsson1949}{68}
 
 
+
+
+
+say that this also works for gothic
+give the examples there
+only the full syncretism is not attested
 
 
 
