verder met syncr
headless relatives - more languages
syncretism - leave gothic out (outcomment)

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -334,4 +334,10 @@
   address={Berlin/New York}
 }
 
-%%checked doi up to here
+@book{lockwood1977,
+  title={An introduction to modern Faroese},
+  author={Lockwood, William Burley},
+  year={1977},
+  publisher={Føroya Skúlabókagrunnur},
+  address={Torshavn}
+}
