--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -141,6 +141,10 @@ To sum up, case competition in headless relative is subject to the case scale, r
 
 If two cases compete, dative wins over accusative and nominative, and accusative wins over nominative. In this section I gave examples from Gothic that illustrate this.
 
+%%now important: this does not only hold for Gothic, but for headless relatives across languages.
+%%is has been observed for german pittner, vogel. for greek grosu, for xxxxxxx
+%%all these languages are subject to another constraint, to which I come back in the second part of the disseration
+
 In the remainder of this chapter I show that headless relatives in Gothic are not the only place where the case scale shows up. Instead, it appears with more morphosyntactic phenomena. Moreover, exactly this scale is also reflected in morphophonology.
 
 
@@ -445,9 +449,15 @@ It has been widely established that syncretism only targets continuous elements 
 That means four possible patterns are crosslinguistically attested. First, all three cases are syncretic. Second, nominative and accusative are syncretic and the dative is not. Third, the accusative and the dative are syncretic and the nominative is not. Fourth, all cases are non-syncretic.
 There is one pattern that is not possible, because it does targets non-continuous regions: nominative and dative are syncretic and accusative is not. This pattern is not attested crosslinguistically.
 
+I give an example from a syncretism between nominative, accusative and dative from Dutch. The second person plural pronoun is \tit{jullie} `you.\tsc{pl}' is syncretic between nominative, accusative and dative.
+I give an example from a syncretism between nominative and accusative but not dative from German. The third person singular feminine \tit{sie} `she/her' is syncretic between nominative and accusative. The dative has a separate form: \tit{ihr} `her'.
+I give an example from a syncretism between accusative and dative but not nominative from Icelandic. The first person singular plural is \tit{okkur} `us' is syncretic between accusative and dative. The nominative has a separate form: \tit{við} `we' \pgcitep{einarsson1949}{68}.
+I give an example from three distinct forms from Faroese. The second person singular is \tit{tú} `you' for nominative, \tit{teg} `you' for accusative
+and \tit{tær} `you' for dative \pgcitep{lockwood1977}{70}.
+
 \begin{table}[H]
   \center
-  \caption {Syncretism patterns}
+  \caption {Syncretism in Germanic \tsc{nom} --- \tsc{acc} --- \tsc{dat}}
     \begin{tabular}{cccccccc}
       \toprule
           \multicolumn{3}{c}{pattern}
@@ -463,18 +473,18 @@ There is one pattern that is not possible, because it does targets non-continuou
             & \cellcolor{LG}jullie
             & 2\ac{pl}
             & Dutch \\
-          A & B & B
-            & við
-            & \cellcolor{LG}okkur
-            & \cellcolor{LG}okkur
-            & 1\tsc{pl}
-            & Icelandic \\
           A & A & B
             & \cellcolor{LG}sie
             & \cellcolor{LG}sie
             & ihr
             & 3\tsc{sg}.\tsc{f}
             & German \\
+          A & B & B
+            & við
+            & \cellcolor{LG}okkur
+            & \cellcolor{LG}okkur
+            & 1\tsc{pl}
+            & Icelandic \\
           A & B & C
             & tú
             & teg
@@ -491,15 +501,10 @@ There is one pattern that is not possible, because it does targets non-continuou
     \end{tabular}
 \end{table}
 
-I give examples from different Germanic languages.
-
-decribe the examples in the table
-
-Icelandic: \pgcitealt{einarsson1949}{68}
 
 
-
-
+gumans gumans gumam  humans (p.46)
+tuggô tuggôn tuggôn tongue (p.47)
 
 say that this also works for gothic
 give the examples there
