tot aan 'no genitive' af!
oooooojaaa!

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -325,13 +325,27 @@
   doi={10.1023/b:jeal.0000007345.64336.84}
 }
 
-@book{terrill2003,
-  title={A grammar of Lavukaleve},
-  author={Terrill, Angela},
-  year={2003},
-  publisher={Mouton de Gruyter},
-  doi={10.1515/9783110923964},
-  address={Berlin/New York}
+@article{grosu2003,
+  title = {A Unified Theory of `standard' and `transparent' Free Relatives},
+  volume = {21},
+  doi = {10.1075/la.55.07gro},
+  number = {2},
+  journal = {Natural Language and Linguistic Theory},
+  author = {Grosu, Alexander},
+  year = {2003},
+  pages = {247-331}
+}
+
+@incollection{moravcsik2009,
+  title={The distribution of case},
+  author={Moravcsik, Edith A.},
+  booktitle={The Oxford handbook of case},
+  editor={Andrej Malchukov and Andrew Spencer},
+  pages={231–245},
+  year={2009},
+  adress={Oxford},
+  publisher={Oxford University Press},
+  doi={10.1093/oxfordhb/9780199206476.013.0016}
 }
 
 @book{lockwood1977,
@@ -340,4 +354,25 @@
   year={1977},
   publisher={Føroya Skúlabókagrunnur},
   address={Torshavn}
+}
+
+@inproceedings{daskalaki2011,
+  address = {Philadelphia},
+  title = {Case Mis-Matching as Kase Stranding},
+  volume = {17},
+  booktitle = {University of {{Pennsylvania Working Papers}} in {{Linguistics}}},
+  publisher = {{Penn Linguistics Club}},
+  author = {Daskalaki, Evangelia},
+  editor = {Friedman, Lauren A.},
+  year = {2011},
+  pages = {77-86}
+}
+
+@book{bobaljik2012,
+  address = {Cambridge, MA},
+  title = {Universals In Comparative Morphology},
+  publisher = {MIT Press},
+  author = {Bobaljik, Jonathan},
+  year = {2012},
+  doi={10.7551/mitpress/9069.003.0001}
 }
