--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -2,27 +2,27 @@
 
 \chapter{A reoccurring pattern}
 
-First I introduce the pattern that forms the focus of the first part of the dissertation. I show that headless relatives in Gothic adhere to the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
+First I introduce the pattern that forms the focus of the first part of the dissertation. I show that headless relatives adhere to the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
 
 Then I show two phenomena that follow the same ordering of \ac{nom}, \ac{acc} and \ac{dat}. The two phenomena are accessibility hierarchies. The first one is about agreement, the second one about relativization.
 
 In the last section of this chapter I discuss how \ac{nom}, \ac{acc} and \ac{dat} pattern in morphology.
 
 
-\section{Case competition in Gothic headless relatives}
+\section{Case competition in headless relatives}
 
-As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. The two competing cases always adhere to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}. This scale is given in \ref{ex:case-scale}. Elements more on the right on this scale win over elements more on the left of this scale.\footnote{
+As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. It is crosslinguistically shown that the two competing cases always adhere to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}. This scale is given in \ref{ex:case-scale}. Elements more on the right on this scale win over elements more on the left of this scale.\footnote{
 I leave the genitive aside. In Section \ref{sec:genitive} I motivate why.
 }
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale}
 
-This can be reformulated as follows. In a competition, dative wins over accusative, and dative wins over nominative. Additionally, accusative wins over nominative. In this section I illustrate this scale with examples. The relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case.
+This can be reformulated as follows. In a competition, dative wins over accusative, and dative wins over nominative. Additionally, accusative wins over nominative. In this section I illustrate this scale with examples. The relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case. I illustrate this with examples from headless relatives in Gothic \citep{harbert1978}.
 
 I start with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in accusative. The examples are repeated from the introduction.
 
 Consider the example in \ref{ex:gothic-acc-dat-rep}, repeated from the introduction. In this example, the internal case is dative and the external case is accusative.
-% The relative clause, including the relative pronoun, is marked in bold.
+The relative clause and the relative pronoun are marked in bold.
 The internal case is dative. The preposition \tit{ana} `on' takes dative complements.
 The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects.
 The relative pronoun \tit{þamm(a)} `who.\ac{dat}' appears in the internal case: the dative.
@@ -33,7 +33,7 @@ Examples, in which the relative pronoun appears in accusative case, the internal
  `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat-rep}
 
 Consider the example in \ref{ex:gothic-dat-acc-rep}, repeated from the introduction. In this example, the internal case is accusative and the external case is dative.
-% The relative clause, excluding the relative pronoun, is marked in bold.
+The relative clause is marked in bold, the relative pronoun is not.
 The internal case is accusative. The predicate \tit{qiþiþ} `say' takes accusative objects.
 The external case is dative. The predicate \tit{taujau} `do' takes dative indirect objects.
 The relative pronoun \tit{þamm} `who.\ac{dat}' appears in the external case: the dative.
@@ -45,19 +45,8 @@ Examples, in which the relative pronoun appears in accusative case, the internal
 
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
 
-Consider the example in \ref{ex:gothic-nom-dat}, in which the internal case is nominative and the external case is dative.
-The relative clause, excluding the relative pronoun, is marked in bold.
-The internal case is nominative. The predicate \tit{sind fraþjaiþ} `are above' takes a nominative subject.
-The external case is dative. The predicate \tit{fraþjaiþ} `think on' takes dative indirect objects.
-The relative pronoun \tit{þaim} `what.\ac{dat}' appears in the external case: the dative.
-Examples, in which the relative pronoun appears in nominative case, the internal case is nominative and the external case is dative, are unattested.
-
-\exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
- what.\ac{dat} -\ac{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
- `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-nom-dat}
-
 Consider the example in \ref{ex:gothic-dat-nom}, in which the internal case is dative and the external case is nominative.
-The relative clause, including the relative pronoun, is marked in bold.
+The relative clause and the relative pronoun are marked in bold.
 The internal case is dative. The predicate \tit{fraletada} `is forgiven' takes dative objects.
 The external case is nominative. The predicate \tit{frijod} `loves' takes nominative subjects.
 The relative pronoun \tit{þamm(a)} `who.\ac{dat}' appears in the internal case: the dative.
@@ -67,21 +56,21 @@ Examples, in which the relative pronoun appears in nominative case, the internal
  but who.\ac{dat} -\ac{comp} ittle {is forgiven}\scsub{[dat]} little loves\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-dat-nom}
 
+ Consider the example in \ref{ex:gothic-nom-dat}, in which the internal case is nominative and the external case is dative.
+ The relative clause is marked in bold, the relative pronoun is not.
+ The internal case is nominative. The predicate \tit{sind fraþjaiþ} `are above' takes a nominative subject.
+ The external case is dative. The predicate \tit{fraþjaiþ} `think on' takes dative indirect objects.
+ The relative pronoun \tit{þaim} `what.\ac{dat}' appears in the external case: the dative.
+ Examples, in which the relative pronoun appears in nominative case, the internal case is nominative and the external case is dative, are unattested.
+
+ \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
+  what.\ac{dat} -\ac{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
+  `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-nom-dat}
+
 I finish with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
 
-Consider the example in \ref{ex:gothic-nom-acc}, in which the internal case is nominative and the external case is accusative.
-The relative clause, excluding the relative pronoun, is marked in bold.
-The internal case is nominative. The predicate \tit{ist us Laudeikaion} `is from Laodicea' takes nominative subjects.
-The external case is accusative. The predicate \tit{ussiggwaid} `read' takes accusative objects.
-The relative pronoun \tit{þo} `what.\ac{acc}' appears in the external case: the accusative.
-Examples, in which the relative pronoun appears in nominative case, the internal case is nominative and the external case is accusative, are unattested.
-
-\exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
- and what.\ac{acc} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
- `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
-
 Consider the example in \ref{ex:gothic-acc-nom}, in which the internal case is accusative and the external case is nominative.
-The relative clause, including the relative pronoun, is marked in bold.
+The relative clause and the relative pronoun are marked in bold.
 The internal case is accusative. The predicate \tit{frijos} `love' takes accusative objects.
 The external case is nominative. The predicate \tit{siuks ist} `is sick' takes nominative subjects.
 The relative pronoun \tit{þan} `who.\ac{acc}' appears in the internal case: the accusative.
@@ -91,12 +80,23 @@ Examples, in which the relative pronoun appears in nominative case, the internal
  who.\ac{acc} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
 
+Consider the example in \ref{ex:gothic-nom-acc}, in which the internal case is nominative and the external case is accusative.
+The relative clause is marked in bold, the relative pronoun is not.
+The internal case is nominative. The predicate \tit{ist us Laudeikaion} `is from Laodicea' takes nominative subjects.
+The external case is accusative. The predicate \tit{ussiggwaid} `read' takes accusative objects.
+The relative pronoun \tit{þo} `what.\ac{acc}' appears in the external case: the accusative.
+Examples, in which the relative pronoun appears in nominative case, the internal case is nominative and the external case is accusative, are unattested.
+
+\exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
+ and what.\ac{acc} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
+ `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
+
 A summary of the Gothic data as a whole is given in Table \ref{tbl:summary-gothic}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match.
 The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
 Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For modern languages it means that the examples are ungrammatical.
 }
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption {Case competition in Gothic headless relatives}
     \input{tables/gothic-grammaticality.tex}
@@ -106,7 +106,7 @@ Throughout this dissertation * stands for 'not found in natural language'. For e
 The three instances in the lower left corner correspond to the examples \ref{ex:gothic-acc-nom}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc-rep}. In the attested examples, the relative pronoun appears in the internal case.
 The three instances in the upper right corner correspond to the examples in \ref{ex:gothic-nom-acc}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat-rep}. In the attested examples, the relative pronoun appears in the external case.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
   \caption {Summary of Gothic matching headless relative data}
     \begin{tabular}{c|c|c|c}
@@ -139,32 +139,32 @@ To sum up, case competition in headless relative is subject to the case scale, r
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-rep}
 
-If two cases compete, dative wins over accusative and nominative, and accusative wins over nominative. In this section I gave examples from Gothic that illustrate this.
+If two cases compete, dative wins over accusative and nominative, and accusative wins over nominative. In this section I gave examples from Gothic that illustrate this. As I mentioned in the introduction of this section, this case scale is not specific for Gothic, but it holds across languages (cf. see \citealt{pittner1995} for Modern, Middle High and Old High German, \citealt{grosu2003} for Ancient Greek and \citealt{daskalaki2011} for Modern Greek).\footnote{
+These languages differ from Gothic in that they are subject to an additional constraint. That is, they only allow either the internal or the external case to win case competitions. If the other case is more to the right on the case scale \ref{ex:case-scale-rep}, the result is ungrammatical.
+Old High German is an example of a language that only allows the external case to win the case competition. If the internal case is more to the right on the case scale, the headless relative is ungrammatical. Modern German is an example of a language that only allows the internal case to win the case competition. If the external case is more to the right on the case scale, the headless relative is ungrammatical.
+This topic is the main focus of Part \ref{part:complexity} of this dissertation.
+}
 
-%%now important: this does not only hold for Gothic, but for headless relatives across languages.
-%%is has been observed for german pittner, vogel. for greek grosu, for xxxxxxx
-%%all these languages are subject to another constraint, to which I come back in the second part of the disseration
-
-In the remainder of this chapter I show that headless relatives in Gothic are not the only place where the case scale shows up. Instead, it appears with more morphosyntactic phenomena. Moreover, exactly this scale is also reflected in morphophonology.
+In the remainder of this chapter I show that headless relatives are not the only place where the case scale shows up. Instead, it appears with more morphosyntactic phenomena. Moreover, exactly this scale is also reflected in morphophonology.
 
 
 \section{Two implicational hierarchies}
 
-In this section I discuss two additional phenomena in morphosyntax that reflect the \ac{nom} < \ac{acc} < \ac{dat} scale. Both are implicational hierarchies. The first one is about agreement, the second one is about relativization. These phenomena show that the pattern in Gothic headless relatives is not something that stands on itself. The scale is a pattern that reoccurs across languages and across different phenomena. Therefore, it should not be treated as an exception with its own stipulated rule. Instead, it is something general that should also follow from general processes in languages.
+In this section I discuss two additional phenomena in morphosyntax that reflect the \ac{nom} < \ac{acc} < \ac{dat} scale. Both are implicational hierarchies. The first one is about agreement, the second one is about relativization. These phenomena show that the pattern in headless relatives is not something that stands on itself. The scale is a pattern that reoccurs across languages and across different phenomena. Therefore, it should not be treated as an exception with its own stipulated rule. Instead, it is something general that should also follow from general processes in languages.
 
 
 \subsection{Agreement}
 
 Agreement can be seen as ``a systematic covariance between a semantic or formal property of one element and a formal property of another'' \citep{steel1978}. Put differently, the shape of one element changes according to some properties of an element it relates to. In this section I discuss the agreement between a predicate and its arguments.
 
-It differs per language with how many of its arguments a predicate agrees. However, it is not random with which agreement takes place. Instead, there is a implicational hierarchy that is identical to the one observed for headless relatives in Gothic: \ac{nom} < \ac{acc} < \ac{dat}.
+It differs per language with how many of its arguments a predicate agrees. However, it is not random with which agreement takes place. Instead, there is a implicational hierarchy that is identical to the one observed for headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
 
 \citet{moravcsik1978} formulated the implicational hierarchy in terms of grammatical functions subject, direct object and indirect object.\footnote{
 \citet{moravcsik1978} also included adverbs on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
 }
 The hierarchy is schematically represented in Figure \ref{fig:agr-sub-do-io}. It should be read as follows: if a language allows the predicate to agree with the argument in a particular circle, it also allows the predicate to agree with the argument in the circle around it.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -209,7 +209,7 @@ Basque is an example of language that can show agreement with the subject, the d
 
 Putting the languages in \posscitet{moravcsik1978} figure gives the following result.
 
- \begin{figure}[H]
+ \begin{figure}[ht]
    \centering
    \begin{tikzpicture}
      \draw (0,1) circle (2.25);
@@ -231,7 +231,7 @@ Putting the languages in \posscitet{moravcsik1978} figure gives the following re
 
 \citet{gilligan1987} performed a typological study among 100 genetically and areally diverse languages, which confirms the picture. The results are shown in Table \ref{tbl:agr-typo}. There are 23 languages that do not show any agreement, like Japanese. There are 31 languages that show agreement only with the subject and not with the direct and indirect object, like German. There are 25 languages that show agreement with the subject and direct object but not with the indirect object, like Hungarian. There are 23 languages that show agreement with the subject, the direct object and the indirect object, like Basque.
 
- \begin{table}[H]
+ \begin{table}[ht]
    \center
    \caption {Agreement accessibility}
      \begin{tabular}[t]{ccccc}
@@ -259,6 +259,7 @@ Actually, \citet{bobaljik2006} also includes ergative-absolutive languages, and 
 
 \begin{figure}[H]
   \centering
+  \footnotesize{
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
@@ -268,13 +269,14 @@ Actually, \citet{bobaljik2006} also includes ergative-absolutive languages, and 
     \node[] at (0,1.5) {dependent case};
     \node[] at (0,0) {dative};
   \end{tikzpicture}
-  \caption{\posscitealt{bobaljik2006} actual schema}
+  }
+  \caption{\footnotesize{\posscitealt{bobaljik2006} actual schema}}
   \label{fig:agr-def-dep-dat}
 \end{figure}
 
 In the languages I discuss in this dissertation, I focus on languages that have nominative as default case and accusative as dependent case, so Figure \ref{fig:agr-nom-acc-dat} suffices.}
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -321,7 +323,7 @@ In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It 
 }
 The implicational hierarchy is schematically represented in Figure \ref{fig:relativization}. It should be read as follows: if a language allows a particular relativization strategy of the grammatical function in a particular circle, it also allows this relativization strategy of the grammatical function of the circle around it. The languages in the figure give examples of the circles they are in.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw (0,1) circle (2.25);
@@ -445,19 +447,19 @@ In this section, I show that this same case scale also shows up in morphophonolo
 
 Syncretism refers to the phenomenon whereby two or more different functions are fulfilled by a single form \citep[cf.][]{baerman2002}. In this section I show that syncretism patterns among nominative, accusative and dative are not random. Instead, they pattern along the case scale \tsc{nom} < \tsc{acc} < \tsc{dat}.
 
-It has been widely established that syncretism only targets continuous elements and not non-continuous ones along the ordering \tsc{nom} --- \tsc{acc} --- \tsc{dat} \citep{baerman2005,caha2009,zompi2017,mcfadden2018,smith2019case}.
-That means four possible patterns are crosslinguistically attested. First, all three cases are syncretic. Second, nominative and accusative are syncretic and the dative is not. Third, the accusative and the dative are syncretic and the nominative is not. Fourth, all cases are non-syncretic.
-There is one pattern that is not possible, because it does targets non-continuous regions: nominative and dative are syncretic and accusative is not. This pattern is not attested crosslinguistically.
+It has widely been established that syncretism is restricted by the linear sequence \tsc{nom} --- \tsc{acc} --- \tsc{dat} \citep{baerman2005,caha2009,zompi2017,mcfadden2018,smith2019case}. That is, if one orders cases in this linear sequence, only contiguous regions in the sequence can be syncretic.
+Following that, four possible patterns are attested crosslinguistically. First, all three cases are syncretic. Second, nominative and accusative are syncretic and the dative is not. Third, the accusative and the dative are syncretic and the nominative is not. Fourth, all cases are non-syncretic.
 
-I give an example from a syncretism between nominative, accusative and dative from Dutch. The second person plural pronoun is \tit{jullie} `you.\tsc{pl}' is syncretic between nominative, accusative and dative.
+There is one pattern that does not target continuous regions, but non-contiguous ones: nominative and dative are syncretic and accusative is not. This pattern is not attested crosslinguistically. In other words, there is no ABA pattern (in which a form B intervenes between the two identically formed As) \citep{bobaljik2012}.
+
+Table \ref{tbl:syncretisms} shows examples for each of these possible patterns. I give an example from a syncretism between nominative, accusative and dative from Dutch. The second person plural pronoun is \tit{jullie} `you.\tsc{pl}' is syncretic between nominative, accusative and dative.
 I give an example from a syncretism between nominative and accusative but not dative from German. The third person singular feminine \tit{sie} `she/her' is syncretic between nominative and accusative. The dative has a separate form: \tit{ihr} `her'.
 I give an example from a syncretism between accusative and dative but not nominative from Icelandic. The first person singular plural is \tit{okkur} `us' is syncretic between accusative and dative. The nominative has a separate form: \tit{við} `we' \pgcitep{einarsson1949}{68}.
-I give an example from three distinct forms from Faroese. The second person singular is \tit{tú} `you' for nominative, \tit{teg} `you' for accusative
-and \tit{tær} `you' for dative \pgcitep{lockwood1977}{70}.
+I give an example from three distinct forms from Faroese. The second person singular is \tit{tú} `you' for nominative, \tit{teg} `you' for accusative and \tit{tær} `you' for dative \pgcitep{lockwood1977}{70}.
 
-\begin{table}[H]
+\begin{table}[ht]
   \center
-  \caption {Syncretism in Germanic \tsc{nom} --- \tsc{acc} --- \tsc{dat}}
+  \caption {Syncretism in \tsc{nom} --- \tsc{acc} --- \tsc{dat}}
     \begin{tabular}{cccccccc}
       \toprule
           \multicolumn{3}{c}{pattern}
@@ -498,29 +500,23 @@ and \tit{tær} `you' for dative \pgcitep{lockwood1977}{70}.
             &
             & not attested \\
       \bottomrule
-    \end{tabular}
+    \end{tabular}\label{tbl:syncretisms}
 \end{table}
 
+In sum, case syncretism follows the ordering of the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
 
 
-gumans gumans gumam  humans (p.46)
-tuggô tuggôn tuggôn tongue (p.47)
+\subsection{Formal containment}
 
-say that this also works for gothic
-give the examples there
-only the full syncretism is not attested
+This section shows a second way in which \tsc{nom} < \tsc{acc} < \tsc{dat} is reflected in morphology: formal containment. In some languages, the form that is used for the accusative literally contains the form that is used for the nominative. In turn, the forms for the dative contains the form for the accusative. I illustrate this phenomenon with examples from Khanty.
 
+Khanty (or Ostyak) \pgcitealt{nikolaeva1999}{16} shows formal containment in some of its pronouns. Three examples are given in Table \ref{tbl:cont-khanty}.
 
+The nominative form for the first person singular is \tit{ma} `I.\tsc{nom}'. The form for the accusative is \tit{ma:ne:m} `me'. This is the form for the nominative \tit{ma} plus the accusative marker \tit{-ne:m}. The form for the dative is \tit{ma:ne:mna} `me'. This is the form for the accusative \tit{ma:ne:m} plus the dative marker \tit{-na}. So, dative formally contains the accusative, and the accusative formally contains the nominative.
 
+The third person singular and first person plural show the same pattern. The accusative forms \tit{luwe:l} `him/her' and \tit{muŋe:w} `us' contain the nominative forms \tit{luw} and the \tit{muŋ} plus the accusative marker \tit{-e:l} or \tit{-e:w}. The dative forms \tit{luwe:lna} `him/her' and \tit{muŋe:wna} `us' contain the accusative forms \tit{luwe:l} and \tit{muŋe:w} plus the dative marker \tit{-na}. Again, the dative formally contains the accusative, which in turn contains the nominative.
 
-\ex. \ac{nom} < \ac{acc} < \ac{dat}
-
-
-\subsection{Morphological containment}
-
-\pgcitealt{nikolaeva1999}{16}
-
-\begin{table}[H]
+\begin{table}[ht]
   \center
 	\caption {Case containment in Khanty}
 		\begin{tabular}{clll}
@@ -532,69 +528,17 @@ only the full syncretism is not attested
     \ac{nom}  & ma
               & luw
               & muŋ                                     \\
-    \ac{acc}  & ma\tbf{:-ne:m}
+    \ac{acc}  & ma:\tbf{-ne:m}
               & luw\tbf{-e:l}
               & muŋ\tbf{-e:w}                           \\
-    \ac{dat}  & ma\tbf{:-ne:m}-\tcol{DG}{\tbf{na}}
-              & luw\tbf{-e:l}-\tcol{DG}{\tbf{na}}
-              & muŋ\tbf{-e:w}-\tcol{DG}{\tbf{na}}  \\
+    \ac{dat}  & ma:\tbf{-ne:m}\tcol{DG}{\tbf{-na}}
+              & luw\tbf{-e:l}\tcol{DG}{\tbf{-na}}
+              & muŋ\tbf{-e:w}\tcol{DG}{\tbf{-na}}       \\
 		\bottomrule
-		\end{tabular}
+  \end{tabular}\label{tbl:cont-khanty}
 \end{table}
 
-
-\pgcitealt{boretzky1994}{31-46}
-
-\begin{table}[H]
-  \center
-	\caption {Case containment in Kalderaš Romani}
-		\begin{tabular}{cllll}
-		\toprule
-              & `brother'
-              & `brothers'
-              & `girl'
-              & `girls'                                   \\
-		\cmidrule{2-5}
-    \ac{nom}  & phral
-              & phral-(á)
-              & rakl-í
-              & rakl-já                                   \\
-    \ac{acc}  & phral-\tbf{és}
-              & phral-\tbf{én}
-              & rakl-\tbf{já}
-              & rakl-já-\tbf{n}                           \\
-    \ac{dat}  & phral-\tbf{és}-\tcol{DG}{\tbf{kə}}
-              & phral-\tbf{én}-\tcol{DG}{\tbf{gə}}
-              & rakl-\tbf{já}-\tcol{DG}{\tbf{kə}}
-              & rakl-já-\tbf{n}-\tcol{DG}{\tbf{gə}}  \\
-		\bottomrule
-		\end{tabular}
-\end{table}
-
-\pgcitealt{gippert1987}{23-24}
-
-\begin{table}[H]
-  \center
-	\caption {Case containment in West Tocharian}
-		\begin{tabular}{cll}
-		\toprule
-              & `horses'
-              & `men'                                  \\
-		\cmidrule{2-3}
-    \ac{nom}  & yakwi
-              & eṅkwi                                  \\
-    \ac{acc}  & yakwe-\tbf{ṃ}
-              & eṅkwe-\tbf{ṃ}                          \\
-    \ac{dat}  & yäkwe-\tbf{ṃ}-\tcol{DG}{\tbf{ts}}
-              & eṅkwe-\tbf{ṃ}-\tcol{DG}{\tbf{ts}} \\
-		\bottomrule
-		\end{tabular}
-\end{table}
-
-\ex. \ac{nom} < \ac{acc} < \ac{dat}
-
-\phantom{nom}
-
+In sum, some languages morphologically look like \tsc{nom}-\tsc{acc}-\tsc{dat}. This exactly reflects the case scale \tsc{nom} < \tsc{acc} < \tsc{dat}.
 
 
 
